# single_line_macro

./: Cargo.toml  README.md
src/: lib.rs
tests/: single_line_tests.rs
