[package]
name = "single_line_macro"
version = "0.2.1"
edition = "2024"
authors = ["Supraerror"]
description = "A macro to create methods and functions on a single line in a more readable way."
readme = "README.md"
repository = "https://github.com/philou404/single_line_macro/"
license = "MIT"
keywords = ["macro", "single-line", "getter", "async"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true